--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.14.0
-pandas==1.4.1
-numpy>=1.26.0
-matplotlib==3.5.1
-seaborn==0.11.2
-scikit-learn==1.0.2
+streamlit==1.25.0
+pandas>=1.4
+numpy>=1.23
+seaborn>=0.11
+matplotlib>=3.4
+plotly>=5.10
