--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.25.0
-pandas>=1.4
-numpy>=1.23
-seaborn>=0.11
-matplotlib>=3.4
-plotly>=5.10
+streamlit==1.32.0
+pandas
+numpy
+seaborn
+matplotlib
+plotly
